# MCP-Gateway

./: .dockerignore  .gitignore  Dockerfile  DockerfileAll  README.md  README.zh.md  agy_ask_helper.sh  package-lock.json  set-version.mjs
.cursor/hf/: nginx.conf
.github/workflows/: backend-release.yml
mcp-gateway/: Cargo.toml  README.md  config.example.json  config.v2.json
mcp-gateway-ui/: package-lock.json  package.json  vite.config.ts
mcp-gateway-ui/scripts/: ensure-ripgrep.mjs  sync-version.mjs  tauri-with-tools.mjs
mcp-gateway-ui/src/: App.tsx  api.ts  i18n.ts  localConfig.ts  styles.css  types.ts
mcp-gateway-ui/src-tauri/: Cargo.toml  github-proxy-pool.json  tauri.conf.json
mcp-gateway-ui/src-tauri/capabilities/: default.json
mcp-gateway-ui/src-tauri/src/: lib.rs  officecli.rs  tray.rs
mcp-gateway-ui/src/components/: ConfirmDialog.tsx  JsonEditor.tsx  ServerRow.tsx  SessionToolsModal.tsx  SkillConfirmations.tsx  SkillDirectoryListEditor.tsx  SkillGroupsEditor.tsx  SkillPolicyRulesEditor.tsx  SystemPromptModal.tsx  UpdateBanner.tsx
mcp-gateway-ui/src/features/servers/: serverStatus.ts
mcp-gateway-ui/src/features/skills/: confirmations.ts  defaultRuleReasons.ts  directories.ts  skillRules.ts
mcp-gateway-ui/src/hooks/: useUpdateCheck.ts
mcp-gateway-ui/src/styles/: components.css
mcp-gateway-ui/src/tauri/: officecli.ts
mcp-gateway-ui/src/utils/: configSnapshot.ts  display.ts  serverConfig.ts
mcp-gateway/crates/gateway-cli/src/: main.rs
mcp-gateway/crates/gateway-core/: Cargo.toml
mcp-gateway/crates/gateway-core/src/: lib.rs  process_job.rs
mcp-gateway/crates/gateway-core/src/config/: legacy.rs  mod.rs  model.rs  service.rs  validate.rs
mcp-gateway/crates/gateway-core/src/runtime/: auth.rs  connection.rs  manager.rs  mod.rs
mcp-gateway/crates/gateway-http/: Cargo.toml  build.rs
mcp-gateway/crates/gateway-http/builtin-skills/apply_patch/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/chat-plus-adapter-debugger/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/chat-plus-adapter-debugger/scripts/: recorder-command.mjs
mcp-gateway/crates/gateway-http/builtin-skills/chrome-cdp/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/chrome-cdp/scripts/: cdp.mjs
mcp-gateway/crates/gateway-http/builtin-skills/codegraph/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/multi_edit_file/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/officecli/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/read_file/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/shell_command/: SKILL.md
mcp-gateway/crates/gateway-http/builtin-skills/task-planning/: SKILL.md
mcp-gateway/crates/gateway-http/src/: auth.rs  lib.rs  openapi.rs  skills.rs  state.rs  terminal.rs
mcp-gateway/crates/gateway-http/src/ai_adapter/: mod.rs  protocol.rs  routes.rs  session.rs
mcp-gateway/crates/gateway-http/src/routes/: admin.rs  gateway.rs  mod.rs  welcome.rs
mcp-gateway/crates/gateway-http/src/skills/: command_policy.rs  confirmations.rs  file_parsing.rs  jsonrpc.rs  mod.rs  planning.rs  results.rs  service.rs  types.rs
mcp-gateway/crates/gateway-http/src/skills/builtin/: chat_plus_adapter_debugger.rs  chrome_cdp.rs  codegraph.rs  definitions.rs  handlers.rs  multi_edit_file.rs  office_cli.rs  read_file.rs  registry.rs  shell_command.rs  task_planning.rs  tool_impl.rs
