[workspace]
members = [
  "crates/gateway-core",
  "crates/gateway-http",
  "crates/gateway-cli",
  "crates/gateway-integration-tests"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures-util = "0.3"
http = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
tempfile = "3.13"
