[package]
name = "mcp-gateway-ui"
version = "0.1.0"
description = "MCP Gateway UI"
authors = []
edition = "2021"

[lib]
name = "mcp_gateway_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
axum = { version = "0.7", features = [] }
chrono = { version = "0.4", features = ["serde"] }
gateway-core = { path = "../../mcp-gateway/crates/gateway-core" }
gateway-http = { path = "../../mcp-gateway/crates/gateway-http" }
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
