[package]
name = "mcp-gateway-ui"
version = "0.1.4"
description = "MCP Gateway UI"
authors = []
edition = "2021"

[lib]
name = "mcp_gateway_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "net", "fs", "io-util"] }
axum = { version = "0.7", features = [] }
chrono = { version = "0.4", features = ["serde"] }
gateway-core = { path = "../../mcp-gateway/crates/gateway-core" }
gateway-http = { path = "../../mcp-gateway/crates/gateway-http" }
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
