[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
utoipa.workspace = true
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
