[package]
name = "gateway-http"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
utoipa.workspace = true
multer = "3"
utoipa-swagger-ui.workspace = true
uuid.workspace = true

gateway-core = { path = "../gateway-core" }
